# footbot_specialization

./: README.md
experiments/: footbot_specialization.argos
src/: CMakeLists.txt  footbot_specialization.cpp  footbot_specialization.h  specialization_loop_functions.cpp  specialization_loop_functions.h
